--- a/package.json
+++ b/package.json
@@ -9,8 +9,21 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.0",
     "@astrojs/tailwind": "^5.1.5",
+    "@fontsource-variable/afacad": "^5.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "astro": "^5.1.10",
-    "tailwindcss": "^3.4.17"
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.474.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
